kqed/src/objects/Member_benefit_Location__c.object
<CustomObject>
    <description>Junction Table for relating Member Benefits to Location</description>
    <fields>
        <fullName>Address__c</fullName>
        <formula>Location__r.Street__c &amp; &quot;, &quot; &amp; Location__r.City__c &amp; &quot;, &quot; &amp;  Location__r.PostalCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipName>Member_Benefit_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member_Benefit__c</fullName>
        <label>Member Benefit</label>
        <referenceTo>Member_Benefit__c</referenceTo>
        <relationshipName>Member_Benefit_Locations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Member Partner Location</label>
    <listViews>
        <fullName>All_Member_Benefit_Locations</fullName>
        <columns>Member_Benefit__c</columns>
        <columns>NAME</columns>
        <columns>Location__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All Member Benefit Locations</label>
    </listViews>
    <nameField>
        <label>Member Discount Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Member Partner Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>